<?xml version="1.0" encoding="utf-8"?><!-- Based on: https://github.com/android/platform_frameworks_base/blob/505e3ab/core/res/res/layout/simple_list_item_2.xml -->
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.NekoBox.ListCard"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/nb_space_sm"
    android:layout_marginTop="@dimen/nb_space_xs"
    android:layout_marginEnd="@dimen/nb_space_sm"
    android:layout_marginBottom="@dimen/nb_space_xs">

    <LinearLayout
        android:id="@+id/content_lin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/nb_space_lg"
                android:paddingTop="@dimen/nb_space_md"
                android:paddingBottom="@dimen/nb_space_sm">

                <TextView
                    android:id="@+id/profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.NekoBox.ItemTitle"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textStyle="bold"
                    tools:text="@string/profile_name" />
            </LinearLayout>


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/subscription"
                android:layout_width="@dimen/nb_touch_target"
                android:layout_height="@dimen/nb_touch_target"
                android:layout_gravity="top"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/subscriptions"
                android:focusable="true"
                android:padding="12dp"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_file_cloud_queue" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/edit"
                android:layout_width="@dimen/nb_touch_target"
                android:layout_height="@dimen/nb_touch_target"
                android:layout_gravity="top"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/edit"
                android:focusable="true"
                android:padding="12dp"
                app:srcCompat="@drawable/ic_image_edit" />

            <LinearLayout
                android:id="@+id/share"
                android:layout_width="@dimen/nb_touch_target"
                android:layout_height="@dimen/nb_touch_target"
                android:layout_gravity="top"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/share"
                android:focusable="true"
                android:nextFocusLeft="@+id/container"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/share_layer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="12dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/shareIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_social_share" />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:paddingStart="@dimen/nb_space_lg"
            android:paddingEnd="@dimen/nb_space_xs">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/profile_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.NekoBox.ItemBody"
                    android:textColor="@color/nb_text_tertiary" />

                <TextView
                    android:id="@+id/route_outbound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/nb_space_xs"
                    android:layout_marginBottom="@dimen/nb_space_md"
                    android:textAppearance="@style/TextAppearance.NekoBox.ItemMeta"
                    android:textColor="?attr/primaryOrTextSecondary" />

            </LinearLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/enable"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/nb_touch_target"
                android:layout_marginEnd="@dimen/nb_space_xs"
                android:layout_marginBottom="@dimen/nb_space_xs"
                android:gravity="center" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
